--- a/package.json
+++ b/package.json
@@ -34,8 +34,13 @@
     "@mui/lab": "^5.0.0-alpha.173",
     "@mui/material": "^5.16.7",
     "apexcharts": "^3.52.0",
+    "axios": "^1.7.7",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.4.5",
     "history": "^5.3.0",
+    "jwt-decode": "^4.0.0",
+    "node-jose": "^2.2.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
@@ -45,7 +50,9 @@
     "simplebar-react": "^3.2.6"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^22.5.0",
+    "@types/node-jose": "^1.1.13",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
